--- a/PCA-Yield_Curve-US_Treasuries/Code.ipynb
+++ b/PCA-Yield_Curve-US_Treasuries/Code.ipynb
@@ -2702,7 +2702,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## So, I want to short the 2Y twice, long the 1 MO once and long the 20Y once. That is the optimal butterfly. Yield and price have an inverse relationship. And didn't consider maturities in between the ones given in the data from the U.S. Department of the Treasury."
+    "## So, I want to short the 2Y twice, long the 1 MO once and long the 20Y once. That is the optimal butterfly. Yield and price have an inverse relationship. And didn't consider maturities in between the ones given in the data from the U.S. Department of the Treasury. And this is the optimal butterfly for a holding period of 1 day. For 6 months, I need to forecast the PCs over 6 months and that might pose challenges at this very second given the current innacuracy for a 1-month holding period."
    ]
   },
   {
